fix(AddressEdit): incorrect label wrap on safari

--- a/src/address-edit/index.less
+++ b/src/address-edit/index.less
@@ -8,7 +8,7 @@
     border-radius: @padding-xs;
 
     .van-field__label {
-      width: 4em;
+      width: 4.1em;
     }
   }
 
